# django-transformers-pipelines

./: .coveragerc  .gitignore  .pylintrc  README.md  README.rst  boot_django.py  load_tests.py  requirements.dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: deploy.yml
django_ml_project/: manage.py
django_ml_project/django_inference/: admin.py  apps.py  models.py  serializers.py  utils.py  views.py
django_ml_project/django_inference/tests/: test_models.py
django_ml_project/django_ml_project/: asgi.py  settings.py  urls.py  wsgi.py
django_transformers_pipelines/: admin.py  apps.py  exceptions.py  models.py  routers.py  serializers.py  urls.py  utils.py  views.py
django_transformers_pipelines/migrations/: 0001_initial.py
django_transformers_pipelines/tests/: factories.py  test_models.py  test_utils.py
example_project/: requirements.txt
example_project/example_project/: settings.py  urls.py
scripts/: run_example.sh  run_tests.sh
