# setup.cfg

[metadata]
name = django-transformers-pipelines
version = 1.0.3
description = Django app to simplify deployment of huggingface pipelines
long_description = file:README.rst
url = https://github.com/wolfe-ml/django-transformers-pipelines
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = true
python_requires = >=3.6
setup_requires =
    setuptools >= 38.3.0
install_requires =
    Django>=2.2
    transformers
    torch
test_suite = load_tests.get_suite
tests_require =
    coverage
py_modules=["django_transformers_pipelines"]
